--- a/Respon/Skibidi 1/style.css
+++ b/Respon/Skibidi 1/style.css
@@ -2,7 +2,7 @@
 {
     margin: 0;
     padding: 0;
-    box-sizing: border-box:
+    box-sizing: border-box;
 }
 
 body {
@@ -22,7 +22,7 @@ body {
 h2 {
     text-align: center; 
     font-size: 1.5em;
-    color: #e94d58:
+    color: #e94d58;
     margin: 15px 0;
 }
 .btn-group {
